fixed back to top button on ios safari

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
 }
 
 .icon-row {
-    bottom: -30px;
+    top: -10%;
 }
 
 .back-to-top {
